<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.characters.CharactersListScreen"
    android:id="@+id/content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsibleToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/toolbarImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="false"
                tools:src="@android:color/white"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="52dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:padding="12dp"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/wordsMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_icon_decor"
                android:tint="@color/color_accent" />

            <TextView
                style="@style/CharacterPanel.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/words" />

            <TextView
                android:id="@+id/wordsValue"
                style="@style/CharacterPanel.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:paddingStart="4dp"
                tools:text="Our Sun Shines Bright" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/bornMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_icon_decor"
                android:tint="@color/color_accent" />

            <TextView
                style="@style/CharacterPanel.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/born" />

            <TextView
                android:id="@+id/bornValue"
                style="@style/CharacterPanel.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:paddingStart="4dp"
                tools:text="In 283 AC" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/titlesMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_icon_decor"
                android:tint="@color/color_accent" />

            <TextView
                style="@style/CharacterPanel.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/titles" />

            <TextView
                android:id="@+id/titlesValue"
                style="@style/CharacterPanel.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:paddingStart="4dp"
                tools:text="Lord Commander of the Night's Watch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/aliasesMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_icon_decor"
                android:tint="@color/color_accent" />

            <TextView
                style="@style/CharacterPanel.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/aliases" />

            <TextView
                android:id="@+id/aliasesValue"
                style="@style/CharacterPanel.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:paddingStart="4dp"
                tools:text="Ned Stark's Bastard The Snow of Winterfell, The Crow-Come-Over The 998th, Lord Commander of the Night's Watch, The Bastard of Winterfell, The Black Bastard of the Wall, Lord Crow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/fatherMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_icon_decor"
                android:visibility="invisible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/father"
                style="@style/CharacterPanel.Label"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <Button
                    android:id="@+id/btnFather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Rhaegar Targaryen"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/color_primary_dark"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/motherMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_icon_decor"
                android:visibility="invisible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/mother"
                style="@style/CharacterPanel.Label"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <Button
                    android:id="@+id/btnMother"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Lyanna Stark"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/color_primary_dark"/>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>